--- a/WebDPRCalc/Views/User/Profile.cshtml
+++ b/WebDPRCalc/Views/User/Profile.cshtml
@@ -7,11 +7,11 @@
 
     <div class="profile">
         <div class="info-cont">
-            <label>Username: </label>
+            <label>Username: &ensp;</label>
             <div id="user">@ViewBag.profile.username</div>
         </div>
 
-        <div>Change your password below</div>
+        <div class="subtitle2">Change your password below</div>
         <div class="form-cont">
             <form method="post" class="act-form">
                 <div class="inp-cont-nbg">
