--- a/WebDPRCalc/Views/Calculator/Tutorial.cshtml
+++ b/WebDPRCalc/Views/Calculator/Tutorial.cshtml
@@ -54,7 +54,7 @@
 
             <div class="def-cont">
                 <div class="term">Halfling Luck</div>
-                <div class="def">See Lucky (Above). Functions the same but is a racial feature instead of a class feat.</div>
+                <div class="def">Whenever a halfing rolls a 1 on a d20 for an attack roll, they can reroll it once and must use the new roll.</div>
             </div>
 
             <div class="def-cont">
@@ -64,7 +64,7 @@
 
             <div class="def-cont">
                 <div class="term">To Hit Dice/Die</div>
-                <div class="def">The dice or die that the user will use every time they attempt to make an attack.</div>
+                <div class="def">Additional dice or die that the user will use every time they attempt to make an attack, this should not include any d20 normally rolled, but rather any additonal die added to it.</div>
             </div>
 
             <div class="def-cont">
@@ -92,7 +92,7 @@
                 <div class="def">Additional, non-primary damage Dice/Die that affect the over all damage, but do not recieve the attack modifier bonus with them.</div>
             </div>
         </div>
-        
+
         <div class="subtitle">Entering Dice</div>
 
         <div class="subsection">
